tests/bad/return_stmt.glaz
fn x() {
  return true;
}

fn x2() i32 {
  return false;
}

fn main() {
}
